Largish commit to add (finally) the package File I/O as an optional extension to the server. Unfortunately the extension does not compile with this commit, but the groundwork is all done as far as: adding the file extension-fileio.c to Makefile.in, adding the flag to configure.ac, and making sure everything is found/can be linked and whatnot. Next step is to fix the many compilation errors, probably stemming from the switch from gcc to g++, which the File I/O code has probably never been through.

--- a/server/config.h.in
+++ b/server/config.h.in
@@ -276,6 +276,9 @@
  */
 #undef USE_EXT_FUP
 
+/* File I/O is the other package for manipulating files. */
+#undef USE_FILEIO
+
 /* Expat is the XML parsing library by James Clark. */
 #undef HAVE_EXPAT_H
 
