--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -36,6 +36,7 @@ CSRCS = ast.c code_gen.c db_file.c db_io.c db_objects.c db_properties.c \
 
 OPT_EXT_XML_SRC = ext-xml.c
 OPT_EXT_FUP_SRC = ext-FUP.c
+OPT_FILEIO_SRC  = extension-fileio.c
 
 OPT_NET_SRCS = net_single.c net_multi.c \
 	net_mp_selct.c net_mp_poll.c net_mp_fake.c \
@@ -63,11 +64,11 @@ SYSHDRS = my-ctype.h my-fcntl.h my-in.h my-inet.h my-ioctl.h my-math.h \
 
 CLIENT_SRCS = client_bsd.c client_sysv.c
 
-ALL_CSRCS = $(CSRCS) $(OPT_EXT_FUP_SRC) $(OPT_EXT_XML_SRC) $(CLIENT_SRCS)
+ALL_CSRCS = $(CSRCS) $(OPT_EXT_FUP_SRC) $(OPT_EXT_XML_SRC) $(OPT_FILEIO_SRC) $(CLIENT_SRCS)
 
 SRCS = $(ALL_CSRCS) keywords.gperf $(YSRCS) $(HDRS) $(SYSHDRS)
 
-COBJS = $(CSRCS:.c=.o) $(OPT_EXT_FUP_SRC:.c=.o)  $(OPT_EXT_XML_SRC:.c=.o)
+COBJS = $(CSRCS:.c=.o) $(OPT_EXT_FUP_SRC:.c=.o)  $(OPT_EXT_XML_SRC:.c=.o) $(OPT_FILEIO_SRC:.c=.o)
 
 YOBJS = $(YSRCS:.y=.o)
 
@@ -86,12 +87,7 @@ client_bsd: client_bsd.o
 client_sysv: client_sysv.o
 	$(CC) $(CFLAGS) $(DEFS) client_sysv.o $(LIBS) -o $@
 
-# This rule gets around some "make"s' desire to `derive' it from `restart.sh'.
-restart:
-	touch restart
-
 configure: configure.ac
-	# autoconf
 	@echo "Not running autoconf; you must do this by hand."
 	touch configure
 
@@ -334,6 +330,7 @@ ext-xml.o: ext-xml.c config.h bf_register.h functions.h my-stdio.h \
   execute.h db.h program.h structures.h version.h opcode.h options.h \
   parse_cmd.h db_tune.h storage.h my-string.h ref_count.h list.h \
   streams.h utils.h exceptions.h tasks.h
+extension-fileio.o: extension-fileio.c
 client_bsd.o: client_bsd.c my-socket.h config.h my-stdio.h my-stdlib.h \
   my-string.h my-sys-time.h options.h my-types.h my-unistd.h
 client_sysv.o: client_sysv.c my-fcntl.h config.h my-signal.h my-stdio.h \
