Make OUTBOUND_NETWORK a configure option
One way this project strayed from original LambdaMOO is the
OUTBOUND_NETWORK setting in options.h was defaulting to "enabled."
This meant that the default was to allow outbound network connectinos
from MOO code, which the comments frown upon. Even though every
installation of LambdaMOO today probably has this enabled I'm
reverting to the default of having OUTBOUND_NETWORK undefined, meaning
no outbound connections can be made.

This change is one step closer to resolving issue #16, where NP_LOCAL
and NP_SINGLE currently won't compile, and to moving all compile-time
options out into the configure script.

--- a/server/configure.ac
+++ b/server/configure.ac
@@ -339,6 +339,25 @@ else
    AC_MSG_NOTICE([The server will fork() when doing a database checkpoint])
 fi
 
+dnl Enable/disable outbound network connections
+AC_ARG_WITH([outbound-network],
+        [AS_HELP_STRING([--with-outbound-network],
+        [Outbound network connections. Args: enabled/disabled/blocked  @<:@default: blocked@:>@])],
+        [outbound_network=${withval}],
+        [outbound_network=blocked])
+
+if test "x${outbound_network}" = xblocked || test "x${outbound_network}" = xno; then
+   AC_MSG_NOTICE([Outbound network connections will be completely blocked])
+elif test "x${outbound_network}" = xdisabled; then
+   AC_MSG_NOTICE([Outbound network connections are disabled by default (enable with +O at runtime)])
+   AC_DEFINE([OUTBOUND_NETWORK], 0, [Outbound network connections are disabled by default (enable with +O at runtime)])
+elif test "x${outbound_network}" = xenabled || test "x${outbound_network}" = xyes; then
+   AC_MSG_NOTICE([Outbound network connections will be enabled by default (disable with -O at runtime)])
+   AC_DEFINE([OUTBOUND_NETWORK], 1, [Outbound network connections are enabled by default (disable with -O at runtime)])
+else
+   AC_MSG_ERROR([Invalid argument for outbound-network: '${outbound_network}' (valid options are: blocked/enabled/disabled)])
+fi
+
 
 dnl Let the user choose to include openssl or not
 AC_ARG_WITH([openssl],
