--- a/server/config.h.in
+++ b/server/config.h.in
@@ -293,3 +293,28 @@
 
 #endif /* !Config_H */
 
+/******************************************************************************
+ * The built-in MOO function open_network_connection(), when enabled,
+ * allows (only) wizard-owned MOO code to make outbound network connections
+ * from the server.  When disabled, it raises E_PERM whenever called.
+ *
+ * The +O and -O command line options can explicitly enable and disable this
+ * function.  If neither option is supplied, the definition given to
+ * OUTBOUND_NETWORK here determines the default behavior
+ * (use 0 to disable by default, 1 or blank to enable by default).
+ * 
+ * If OUTBOUND_NETWORK is not defined at all,
+ * open_network_connection() is permanently disabled and +O is ignored.
+ *
+ * *** THINK VERY HARD BEFORE ENABLING THIS FUNCTION ***
+ * In some contexts, this could represent a serious breach of security.  
+ *
+ * Note: OUTBOUND_NETWORK may not be defined if NETWORK_PROTOCOL is either
+ *	 NP_SINGLE or NP_LOCAL.
+ */
+
+/* possible values:                                     */
+/* 0: disabled by default, +O enables at runtime        */
+/* 1: enabled by default, -O disables at runtime        */
+/* undef: outbound network connections are not possible */
+#undef OUTBOUND_NETWORK
