Sorted lines; refined what we ignore in the databases/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
+*.db
+*.o
+*~
+.\#*
 Makefile
-configure
+Makefile.in
+TAGS
+\#*\#
 autom4te.cache
 config.h
 config.log
 config.status
-y.tab.h
-*.o
+configure
 moo
-*.db
-\#*\#
-.\#*
-*~
-server/databases/*
-Makefile.in
-TAGS
+server/databases/*.db
+server/databases/*.log
+y.tab.h
