--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -25,14 +25,15 @@ INSTALL_DATA	= @INSTALL_DATA@
 YFLAGS = -d
 COMPILE.c = $(CC) $(CFLAGS) $(DEFS) $(CPPFLAGS) -c
 
-CSRCS = ast.c code_gen.c db_file.c db_io.c db_objects.c db_properties.c \
-	db_verbs.c decompile.c disassemble.c eval_env.c eval_vm.c \
-	exceptions.c execute.c extensions.c functions.c keywords.c list.c \
-	log.c match.c md5.c name_lookup.c network.c net_mplex.c \
-	net_proto.c numbers.c objects.c parse_cmd.c pattern.c program.c \
-	property.c quota.c regexpr.c server.c storage.c streams.c str_intern.c \
-	sym_table.c tasks.c timers.c unparse.c utils.c verbs.c version.c \
-	bg_name_lookup.c
+CSRCS = ast.c code_gen.c db_file.c db_io.c db_objects.c			\
+	 db_properties.c db_verbs.c decompile.c disassemble.c		\
+	 eval_env.c eval_vm.c exceptions.c execute.c extensions.c	\
+	 functions.c keywords.c list.c log.c match.c md5.c		\
+	 name_lookup.c network.c net_mplex.c net_proto.c numbers.c	\
+	 objects.c parse_cmd.c pattern.c program.c property.c quota.c	\
+	 regexpr.c server.c storage.c streams.c str_intern.c		\
+	 sym_table.c tasks.c timers.c unparse.c utils.c verbs.c		\
+	 version.c bg_name_lookup.c
 
 OPT_EXT_XML_SRC = ext-xml.c
 OPT_EXT_FUP_SRC = ext-FUP.c
@@ -47,15 +48,15 @@ OPT_NET_OBJS = $(OPT_NET_SRCS:.c=.o)
 
 YSRCS = parser.y
 
-HDRS =  ast.h bf_register.h code_gen.h db.h db_io.h db_private.h decompile.h \
-	db_tune.h \
-	disassemble.h eval_env.h eval_vm.h exceptions.h execute.h functions.h \
-	getpagesize.h keywords.h list.h log.h match.h md5.h name_lookup.h \
-	network.h net_mplex.h net_multi.h net_proto.h numbers.h opcode.h \
-	options.h parse_cmd.h parser.h pattern.h program.h quota.h random.h \
-	regexpr.h server.h storage.h streams.h structures.h  str_intern.h \
-	sym_table.h tasks.h timers.h tokens.h unparse.h utils.h verbs.h \
-	version.h
+HDRS = ast.h bf_register.h code_gen.h collections.h db.h db_io.h	\
+	db_private.h decompile.h db_tune.h disassemble.h eval_env.h	\
+	eval_vm.h exceptions.h execute.h functions.h getpagesize.h	\
+	keywords.h list.h log.h match.h md5.h name_lookup.h network.h	\
+	net_mplex.h net_multi.h net_proto.h numbers.h opcode.h		\
+	options.h parse_cmd.h parser.h pattern.h program.h quota.h	\
+	random.h regexpr.h server.h storage.h streams.h structures.h	\
+	str_intern.h sym_table.h tasks.h timers.h tokens.h unparse.h	\
+	utils.h verbs.h version.h
 
 SYSHDRS = my-ctype.h my-fcntl.h my-in.h my-inet.h my-ioctl.h my-math.h \
 	my-poll.h my-signal.h my-socket.h my-stat.h my-stdarg.h my-stdio.h \
