Modernize build flags and fix legacy network/file I/O defects
- Replace hardcoded 32-bit CFLAGS in server/Makefile.in with configure-provided @CFLAGS@ to restore modern macOS/Linux builds.

- Rework server/network.c connection-option handling to be protocol-aware so NP_SINGLE and NP_LOCAL compile cleanly while preserving NP_TCP behavior.

- Fix file mode guard precedence bugs in server/extension-fileio.c (read/write checks now evaluate mode flags correctly).

- Add startup-time output DB writability validation in server/db_file.c so invalid output paths fail fast with a clear error.

Addresses: #16 (NP_LOCAL/NP_SINGLE compile failures), #12 (missing early output DB write error), and #15 (File I/O defect class: mode-check logic bugs).

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -17,7 +17,7 @@ YACC	= @YACC@
 # for debugging you might prefer:
 # CFLAGS='-g -m32 -O0 -Wall'
 
-CFLAGS		= -m32 -O
+CFLAGS		= @CFLAGS@
 CPPFLAGS	= @CPPFLAGS@
 INSTALL         = @INSTALL@
 INSTALL_DATA	= @INSTALL_DATA@
