Move more header-tuned behavior into configure options
- Add configure flags for behavior that previously required editing options.h:

  --with-pattern-cache-size=NUM

  --with-input-backspace=yes|no

  --with-ignore-prop-protected=yes|no

- Wire new CONFIG_* defines through config.h/options.h so runtime behavior is controlled from configure instead of manual header edits.

- Regenerate and include server/configure plus required build-aux files (config.guess/config.sub) for the updated script.

- Update README build example to document the new options.

Validation: configure+build succeeded for default and non-default profiles.

Addresses: #9.

--- a/server/config.h.in
+++ b/server/config.h.in
@@ -196,6 +196,15 @@
 
 #undef USE_OWN_STRING_H
 
+/* Build-time option: size of the pattern match cache. */
+#undef CONFIG_PATTERN_CACHE_SIZE
+
+/* Build-time option: apply backspace/delete to input on non-binary connections. */
+#undef CONFIG_INPUT_APPLY_BACKSPACE
+
+/* Build-time option: ignore protection checks on built-in properties. */
+#undef CONFIG_IGNORE_PROP_PROTECTED
+
 /* On some systems, notably AIX, both <sys/ioctl.h> and <stropts.h> define the
  * internal macro `_IO' in compatible but different ways.  This means that no
  * program can #include both files without getting an error.  If this is so on
