Eliminate server build warnings and stabilize parallel parser generation
This change set removes all compiler warnings observed in a clean server build and fixes a parallel make race discovered while validating warning-clean output.

Why this was needed:

- The project emitted 154 warnings in a clean build (C++-mode input warnings, deprecated register usage, deprecated sprintf usage, enum switch diagnostics, and one unsequenced expression warning).

- Parallel builds could intermittently fail due to duplicate yacc/bison parser generation jobs racing on y.tab.c -> parser.c.

- Goal: keep historical behavior while making the build reproducible and warning-free on modern clang/g++ toolchains.

Build-system changes (server/Makefile.in):

- Compile .c sources explicitly as C++ via '-x c++' to remove repeated compiler front-end warning noise and make mode explicit.

- Reworked parser generation dependencies for GNU make 3.81 compatibility: parser.c is generated once from parser.y and y.tab.h depends on parser.c, preventing parallel race failures.

- Updated keywords generation filter pipeline to preserve existing include rewrite and support cleanup of generated legacy syntax expectations.

Code warning cleanups (behavior-preserving):

- Replaced deprecated sprintf calls with bounded snprintf in: db_io.c, name_lookup.c, net_multi.c, numbers.c, server.c, storage.c, streams.c, extension-fileio.c, tasks.c, bg_name_lookup.c, ext-FUP.c.

- Removed deprecated 'register' storage class uses in hand-written code: eval_env.c, execute.c, utils.c, ext-FUP.c.

- Updated generated keyword table source (keywords.c) to remove legacy register qualifiers that trigger C++17 deprecation warnings.

- Fixed one unsequenced expression warning in decompile.c by splitting a macro call side effect into an explicit temporary label variable before comparison.

- Adjusted opcode variable typing in execute.c to avoid enum-case diagnostic noise while preserving opcode dispatch semantics.

Safety and sco

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -23,7 +23,7 @@ INSTALL         = @INSTALL@
 INSTALL_DATA	= @INSTALL_DATA@
 
 YFLAGS = -d
-COMPILE.c = $(CC) $(CFLAGS) $(DEFS) $(CPPFLAGS) -c
+COMPILE.c = $(CC) $(CFLAGS) $(DEFS) $(CPPFLAGS) -x c++ -c
 
 CSRCS = ast.c code_gen.c db_file.c db_io.c db_objects.c			\
 	 db_properties.c db_verbs.c decompile.c disassemble.c		\
@@ -103,9 +103,12 @@ config.h: config.h.in config.status
 	@echo "[ $@ : $? ]"
 	./config.status
 
-parser.c y.tab.h: parser.y
+parser.c: parser.y
 	$(YACC) $(YFLAGS) parser.y
 	mv -f y.tab.c parser.c
+
+y.tab.h: parser.c
+	@test -f y.tab.h
 
 # The LambdaMOO server project originally shipped with a lightly
 # hacked version 2.1 of GNU gperf, renamed 'pgperf'; Pavel Curtis
@@ -124,6 +127,7 @@ keywords.c: keywords.gperf
 	gperf --language=C++ --ignore-case --readonly-tables --struct-type \
 		--omit-struct-type --key-positions=1,3,$$ keywords.gperf   \
 		| sed -e 's/#include <ctype.h>/#include "my-ctype.h"/'     \
+		      -e 's/register[[:space:]][[:space:]]*//g'            \
 		> keywords.c
 
 TAGS:
